--- a/main.css
+++ b/main.css
@@ -3,29 +3,43 @@ body{
             color:#1A1A1A;
             font-family: Helvetica;
         }
+
         h1{
-            color: red;
+            color: blue;
             font-weight: lighter;
             font-family: 'Nerko One', cursive;
+            font-size: 4em;
+            text-shadow: 2px 4px black;
+            text-align: center;
 
         }
+
         h2 {
-            color:green;
+            color:purple;
+            font-size: 1.5em;
             font-weight: bolder;
+            text-transform:uppercase;
+            text-align: center;
         }
+
         h3 {
+            color: purple;
             font-weight: bolder;
+            font-family: 'Nerko One', cursive;
+            font-size: 1.5em;
         }
+
         a {
             color: blue;
         }
+
         a:hover {
             text-decoration: none;
-            color:pink;
+            color:purple;
         }
 
         .box {
-            border: 1px solid #000000;
+            border: 1px solid purple;
             width: 400px;
             background-color: #37c6ef;
             margin: 15px;
@@ -40,4 +54,9 @@ body{
             display:flex;
             flex-wrap: wrap;
             justify-content: center;
+        }
+
+        footer{
+			font-family: 'Nerko One', cursive;
+            text-align: center;
         }
